@@ -1,3 +1,8 @@
+2002-01-28  Kevin Vandersloot <kfv101@psu.edu>
+
+	* favorites.c: call e_tree_model_node_changed on the 
+	root node so stuff gets displayed
+
 2002-01-16  Kevin Vandersloot <kfv101@psu.edu>
 
 	* util.c: unmark a string for translation since it won't
